Fixed the navigation button alignments.

--- a/packages/client-mav/src/app/make-a-vis/legend-view/main/main.component.sass
+++ b/packages/client-mav/src/app/make-a-vis/legend-view/main/main.component.sass
@@ -18,12 +18,13 @@
       font-size: 1.5rem
 
     .icon
-      height: 3rem
+      height: 2.5rem
+      padding-top: 0.5rem
 
     .home-icon
-      font-size: 7rem
-      height: 5.6rem
-      width: 7rem
+      font-size: 6rem
+      height: 5rem
+      width: 6rem
       color: #006298
 
   .legend-view-container
