--- a/packages/client-mav/src/app/shared/components/button-group/button-group.component.scss
+++ b/packages/client-mav/src/app/shared/components/button-group/button-group.component.scss
@@ -41,6 +41,7 @@
 
         .mat-button-toggle-label-content {
           padding: 0 0;
+          line-height: 2.5rem;
         }
       }
     }
